chat start refactured to use launcher and additional chat config options